--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <body>
 
     <div class="glogo"></div>
+    <img src="microphone-icon.jpg" class='voice'>
     <form action="google.html" method="get" >
-      <input type="text" class="text_box">
+      <input type="text" class="text_box" autofocus>
       <input type="button" value="Google Search" class= "button Search">
       <input type="button" value="I'm Feeling Lucky" class="button Lucky">
     </form>
