--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 
     <div class="glogo"></div>
     <img src="microphone-icon.jpg" class='voice'>
+
     <form action="google.html" method="get" >
       <input type="text" class="text_box" autofocus>
       <input type="button" value="Google Search" class= "button Search">
       <input type="button" value="I'm Feeling Lucky" class="button Lucky">
     </form>
+
+    <div class="navbar">
+      <div class="gmail">Gmail</div>
+      <div class="images">Images</div>
+      <img src="squares.png" class='squares'>
+      <div class="sign_in">Sign in</div>
+    </div>
 
   </body>
 </html>
