Added bottom navigation bars

--- a/index.html
+++ b/index.html
@@ -15,12 +15,31 @@
       <input type="button" value="I'm Feeling Lucky" class="button Lucky">
     </form>
 
+    <div class="languages">
+      <div class="offerings ">Google offered in:</div>
+      <div class=" german ">Deutsch</div>
+    </div>
+
     <div class="navbar">
       <div class="gmail">Gmail</div>
       <div class="images">Images</div>
       <img src="squares.png" class='squares'>
       <div class="sign_in">Sign in</div>
     </div>
+
+    <div class="upper_bottom_bar">
+      <div class="country">Germany</div>
+    </div>
+
+    <div class="lower_bottom_bar">
+      <div class="advertising">Advertising</div>
+      <div class="businnes">Business</div>
+      <div class="about">About</div>
+      <div class="privacy">Privacy</div>
+      <div class="terms">Terms</div>
+      <div class="settings">Settings</div>
+    </div>
+
 
   </body>
 </html>
