Fixed positioning issue of Lucky button and microphone

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
 
     <div class="glogo"></div>
-    <img src="microphone-icon.jpg" class='voice'>
 
     <form action="google.html" method="get" >
+      <img src="microphone-icon.jpg" class='voice'>
       <input type="text" class="text_box" autofocus>
       <input type="button" value="Google Search" class= "button Search">
       <input type="button" value="I'm Feeling Lucky" class="button Lucky">
@@ -21,10 +21,10 @@
     </div>
 
     <div class="navbar">
-      <div class="gmail">Gmail</div>
-      <div class="images">Images</div>
-      <img src="squares.png" class='squares'>
-      <div class="sign_in">Sign in</div>
+      <a href="#" class="gmail">Gmail</a>
+      <a href ="#" class="images">Images</a>
+      <a href="#" class="squares"></a>
+      <input type="button" value="Sign in" class="sign_in">
     </div>
 
     <div class="upper_bottom_bar">
@@ -32,13 +32,15 @@
     </div>
 
     <div class="lower_bottom_bar">
-      <div class="advertising">Advertising</div>
-      <div class="businnes">Business</div>
-      <div class="about">About</div>
-      <div class="privacy">Privacy</div>
-      <div class="terms">Terms</div>
-      <div class="settings">Settings</div>
+      <a href="#" class="advertising">Advertising</a>
+      <a href="#" class="businnes">Business</a>
+      <a href="#" class="about">About</a>
+      <a href="#" class="privacy">Privacy</a>
+      <a href="#" class="terms">Terms</a>
+      <a href="#" class="settings">Settings</a>
     </div>
+
+
 
 
   </body>
